--- a/www/style.css
+++ b/www/style.css
@@ -3,9 +3,21 @@ body {
   font-family:Arial, Helvetica, sans-serif;
 }
 
-loginBubble {
+div.loginBubble {
+  position:absolute;
+  top:50%;
+  left:50%;
+  width:40em;
+  margin-left:-20em;
   -moz-border-radius: 1em 1em 1em 1em;
   border-radius: 1em 1em 1em 1em;
   background-color: #CCFFFF;
 }
+
+div.textBubble {
+  left:50%;
+  width:20em;
+  margin-left:-10em;
+}
+
 
